tests/extended/invalid/simple/If_CompileFail_2.whiley
bool f(bool z):
     if(z):
         return true
    else:
        return 0
